--- a/src/components/users-table/style.module.scss
+++ b/src/components/users-table/style.module.scss
@@ -1,3 +1,14 @@
 .row:hover {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+.controls {
+  margin-bottom: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  .deletion {
+    margin-left: 8px;
+  }
 }
