style(users-table): update table and cells with material-ui components

--- a/src/components/users-table-head-cell/style.module.scss
+++ b/src/components/users-table-head-cell/style.module.scss
@@ -2,6 +2,11 @@ th {
     .head-cell {
         display: flex;
         flex-direction: column;
+        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+
+        &__label {
+            margin-bottom: 4px;
+        }
     }
 }
 
