--- a/src/components/users-table/style.module.scss
+++ b/src/components/users-table/style.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 
   .deletion {
     margin-left: 8px;
