--- a/src/components/users-table/style.module.scss
+++ b/src/components/users-table/style.module.scss
@@ -1,7 +1,3 @@
-.row:hover {
-  cursor: pointer;
-}
-
 .controls {
   margin-bottom: 8px;
   display: flex;
@@ -12,4 +8,10 @@
   .deletion {
     margin-left: 8px;
   }
+}
+
+.name-cell {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
 }
